<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainMenuActivity">

    <Button
        android:id="@+id/level1Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="252dp"
        android:layout_marginTop="31dp"
        android:onClick="level1ButtonClicked"
        android:text="@string/atart_Level_1"
        app:layout_constraintBottom_toTopOf="@+id/level2Button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <Button
        android:id="@+id/level2Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="251dp"
        android:onClick="level2ButtonClicked"
        android:text="@string/atart_Level_2"
        app:layout_constraintBottom_toTopOf="@+id/highscoreButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/level1Button" />

    <Button
        android:id="@+id/highscoreButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="249dp"
        android:onClick="highscoreButtonClicked"
        android:text="@string/highscores"
        app:layout_constraintBottom_toTopOf="@+id/quitButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/level2Button" />

    <Button
        android:id="@+id/quitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="249dp"
        android:layout_marginBottom="88dp"
        android:onClick="quitButtonClicked"
        android:text="@string/quit_game"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/highscoreButton" />
</android.support.constraint.ConstraintLayout>